Signed-off-by: zhangbo8264 <zhangbo8264@163.com>

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,338 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+.nav{
+    position:fixed;top:0;left:0;bottom:0;
+    width:60px;
 }
 
-a {
-  color: #00B7FF;
+html,body{height:100%;width:100%;}
+.wp{
+    display:block;
+    width:100%;height:100%;
+
+    background:#fff;
 }
+
+.wp-nav{
+    position:absolute;top:0;left:0;bottom:0;z-index:3;
+    width:60px;
+    background:url(images/nav.png) 0 0 repeat-y;
+    box-shadow:1px 1px 1px rgba(0,0,0,.5);
+}
+
+.wp-nav ul{}
+.wp-nav li{
+    width:60px;cursor:pointer;
+}
+.wp-nav li .iconfont{display:block;
+    text-align:center;
+    line-height:60px;font-size:30px;color:#aaa;
+}
+.wp-nav li:hover .iconfont{color:#fff;}
+.wp-nav li.on .iconfont{color:#fff;}
+
+
+.wp-cont{
+    margin-left:60px;
+    height:100%;
+    background:url(images/bg.png) 0 0 repeat;
+}
+
+
+/*聊天*/
+.chat{width:800px;
+    position:relative;
+    height:100%;
+    background:#fff;
+    box-shadow:2px 0 2px rgba(0,0,0,.3);
+}
+
+.chat-left{
+    position:absolute;top:0;left:0;bottom:0;
+    width:300px;
+    border-right:1px solid #ccc;
+    background:#f1f1f1;
+    box-sizing:border-box;
+}
+.chat-right{position:relative;
+    margin-left:300px;
+    height:100%;
+    background:#fff;
+}
+
+/**/
+.chat-search{padding-top:12px;
+    height:50px;
+    background:url(images/top.png) 0 0 repeat-x;
+    box-sizing:border-box;
+}
+.chat-search input{
+    display:block;width:250px;
+    padding:0 10px;
+    margin:0 auto;
+    line-height:26px;font-family:"微软雅黑";
+    border:1px solid #ccc;
+    border-radius:25px;
+    box-shadow:1px 1px 2px rgba(0,0,0,.1) inset;
+    box-sizeing:border-box;
+}
+
+.chat-tab{position:relative;
+    height:60px;
+    box-shadow:0 1px 0 #fff;
+    border-top:1px solid #fff;
+    box-sizeing:border-box;
+}
+.chat-tab a{
+    position:relative;float:left;
+    display:block;padding-top:8px;
+    height:52px;width:33.33%;text-align:center;
+    line-height:20px;color:#444;
+}
+.chat-tab a .iconfont{display:block;
+    line-height:28px;font-size:28px;
+}
+.chat-tab a:last-child .iconfont{font-size:26px;}
+.chat-tab a em{display:block;
+    line-height:12px;font-size:10px;
+}
+
+
+
+
+/**/
+.chat-lists{
+    position:absolute;top:110px;bottom:0;left:0;right:0;
+    overflow:auto;
+    border-top:1px solid #ccc;
+}
+.chat-lists li{position:relative;
+    height:50px;
+    border-top:1px solid #fff;
+    border-bottom:1px solid #ccc;
+}
+.chat-lists li:last-child{
+    box-shadow:0 1px 0 #fff;
+}
+.chat-lists .chat-ini{
+    height:20px;
+}
+.chat-lists .chat-ini em{
+    padding:0 30px;display:block;
+    line-height:20px;font-weight:bold;
+    /*background:#ddd;*/
+}
+.chat-photo{
+    display:block;
+    position:absolute;top:5px;left:15px;
+    width:35px;height:35px;
+    padding:3px;
+    background:#ccc;
+    box-shadow:0px 2px 2px  rgba(0,0,0,.4) inset;
+    border-radius:50%;
+    transition:all ease-out .2s;
+}
+.chat-photo img{
+    display:block;width:100%;height:100%;
+    box-shadow:1px 2px 2px rgba(0,0,0,.3);
+    border-radius:50%;
+}
+.chat-name{
+    display:block;
+    padding:0 20px 0 65px;
+    height:50px;overflow:hidden;
+    line-height:50px;font-size:14px;color:#666;}
+
+    .chat-lists::-webkit-scrollbar {
+        width: 10px;height:10px;
+        transition:all ease-out .3s;
+    } /* 这是针对缺省样式 (必须的) */
+
+    .chat-lists::-webkit-scrollbar-track {
+          background-color:#f1f1f1;
+          border-left:1px solid #ddd;
+    } /* 滚动条的滑轨背景颜色 */
+    .chat-lists::-webkit-scrollbar-thumb {
+          background-color:#aaa;
+          background:url(images/scroll.png) 0 0 repeat-y;
+          border:1px solid #aaaaaa;
+          border-right:none;
+          border-radius:5px;
+    } /* 滑块颜色 */
+
+    .chat-lists::-webkit-scrollbar-button {
+          display:none;
+    } /* 滑轨两头的监听按钮颜色 */
+
+    .chat-lists::-webkit-scrollbar-corner {
+          background-color: black;
+    } /* 横向滚动条和纵向滚动条相交处尖角的颜色 */
+
+.chat-dialogue .chat-name{
+    padding-top:10px;
+    height:16px;overflow:hidden;
+    line-height:16px;
+}
+.chat-dialogue p{
+    height:14px;overflow:hidden;
+    padding:0 20px 0 64px;
+    line-height:14px;font-size:12px;color:#999;
+}
+.chat-dialogue li.on{
+    background:#ddd;
+}
+.chat-dialogue li.on:after{
+    display:block;
+    content: ' ';
+    position:absolute;right:10px;top:15px;
+    width:20px;height:20px;
+    background:url(images/chat-on.png) 0 0 no-repeat;
+}
+.chat-dialogue li b{display:block;
+    position:absolute;top:15px;right:5px;
+    width:30px;height:20px;text-align:center;
+    line-height:20px;font-size:12px;color:#d00;
+    background:#ddd;
+    border-radius:10px;
+    box-shadow:1px solid #ddd;
+    box-shadow:1px 1px 1px rgba(0,0,0,.3) inset;
+}
+
+/**/
+.chat-info{
+    height:51px;
+    background:url(images/top.png) 0 0 repeat-x;
+}
+.chat-info span{
+    display:block;
+    margin:0 auto;
+    text-align:center;
+    line-height:50px;
+}
+/**/
+.chat-text{
+    position:absolute;top:51px;bottom:180px;
+    right:0;left:0;
+    overflow:auto;
+    background:#fff;
+    border-bottom:1px solid #ccc;
+    box-sizing:border-box;
+}
+.chat-text-you,.chat-text-me{position:relative;
+    min-height:60px;padding:0 0 15px;
+}
+.chat-text-photo{
+    display:block;
+    position:absolute;top:5px;
+    width:44px;height:44px;
+    padding:3px;
+    background:#ccc;
+    box-shadow:0px 1px 1px  rgba(0,0,0,.5) inset;
+    border-radius:50%;
+    transition:all ease-out .2s;
+}
+.chat-text-photo img{
+    display:block;width:100%;height:100%;
+    box-shadow:1px 2px 2px rgba(0,0,0,.3);
+    border-radius:50%;
+}
+.chat-text-photo:hover{background:#69c;transition:all ease-out .3s;}
+.chat-text-you .chat-text-photo{left:15px;}
+.chat-text-me .chat-text-photo{right:15px;}
+.chat-text-message{position:relative;clear:both;
+    max-width:253px;padding:5px 15px;
+    color:#555;line-height:24px;font-size:14px;
+    border-radius:8px;
+    background:#f2f2f2;
+    box-shadow:0 1px 1px rgba(0,0,0,.3),1px 0 1px rgba(0,0,0,.3),-1px 0 1px rgba(0,0,0,.2),0 -1px 1px rgba(0,0,0,.2);
+}
+.chat-text-you .chat-text-message{float:left;margin-left:90px;}
+.chat-text-me .chat-text-message{float:right;margin-right:90px;}
+
+.chat-text-message:after{
+    position:absolute;top:6px;overflow:hidden;
+    content:"";
+    width:22px; 
+    height:22px; 
+    font-size:0px;
+    line-height:0px;
+    background:url(images/arrow.png) 0 0 no-repeat;
+}
+.chat-text-you .chat-text-message:after{
+    left:-21px;
+}
+.chat-text-me .chat-text-message:after{
+    right:-21px;
+    background-position:-22px 0;
+}
+.chat-text-time{font-size:10px;line-height:25px;color:#666;text-shadow:0 1px 1px rgba(0,0,0,.3);}
+.chat-text-you .chat-text-time{float:left;margin-left:90px;}
+.chat-text-me .chat-text-time{float:right;margin-right:90px;}
+.chat-text-more{
+    display:block;width:130px;
+    margin:15px auto 10px;
+    text-align:center;
+    line-height:20px;color:#fff;font-size:12px;
+    background:#aaa;
+    border-radius:20px;
+}
+    .chat-text::-webkit-scrollbar {
+        width: 10px;height:10px;
+        transition:all ease-out .3s;
+    } /* 这是针对缺省样式 (必须的) */
+
+    .chat-text::-webkit-scrollbar-track {
+          background-color:#f1f1f1;
+          border-left:1px solid #ddd;
+    } /* 滚动条的滑轨背景颜色 */
+    .chat-text::-webkit-scrollbar-thumb {
+          background-color:#aaa;
+          background:url(images/scroll.png) 0 0 repeat-y;
+          border:1px solid #aaaaaa;
+          border-right:none;
+          border-radius:5px;
+    } /* 滑块颜色 */
+
+    .chat-text::-webkit-scrollbar-button {
+          display:none;
+    } /* 滑轨两头的监听按钮颜色 */
+
+    .chat-text::-webkit-scrollbar-corner {
+          background-color: black;
+    } /* 横向滚动条和纵向滚动条相交处尖角的颜色 */
+
+/**/
+.chat-edit{
+    position:absolute;bottom:0;right:0;left:0;
+    height:180px;
+    background:#fff;
+}
+.chat-func{
+    height:30px;
+    background:url(images/top.png) 0 -50px repeat-x;
+}
+.chat-input{
+    outline:none;
+    padding:10px 20px;
+    height:110px;overflow:auto;
+    box-sizing:border-box;
+}
+.chat-submit{
+    height:40px;
+    border-top:1px dashed #ccc;
+    background:#fff;
+    box-sizing:border-box;
+}
+.chat-submit p{
+    float:left;padding:0 0 0 20px;
+    line-height:39px;color:#999;
+}
+.chat-submit a{float:right;
+    display:block;
+    margin:7px 10px 0 0;
+    width:80px;height:24px;
+    text-align:center;
+    line-height:24px;font-size:14px;color:#666;
+    background:url(images/top.png) 0 -80px repeat-x;
+    border:1px solid #ccc;
+    border-radius:5px;
+}
+
