Signed-off-by: zhuerqiang <zhuerqiang@news.cn> 前端准备准备工作。

--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
 		<div class="chat">
 			<div class="chat-left">
 				<div class="chat-search">
-					<input type="text" />
+					<input id="txt_chat_search" type="text" />
 				</div>
 				<div class="chat-tab">
 					<a href="javascript:void(0)">
@@ -219,10 +219,8 @@
 	</div>
 
 </div>
-<script src="/js/jquery.min.js"></script>
-<script type="text/javascript">
 
-</script>
+<script data-main="/js/app.js" src="/js/lib/require.min.js"></script>
 
 </body>
 </html>
