--- a/views/work.html
+++ b/views/work.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 	<title>网站开发</title>
 	<link rel="stylesheet" href="/css/reset.css" />
-	<link rel="stylesheet" href="/css/home.css">
+	<link rel="stylesheet" href="/css/work.css">
 	<link rel="stylesheet" href="/css/icon/iconfont.css">
 </head>
 <body>
@@ -18,9 +18,11 @@
 	</div>
 
 	<div class="wp-cont">
-		<div class="home">
-			<h1>首页</h1>
-			<p>首页就是牛逼，这里是一切牛逼技术的开始.</p>
+		<div class="work">
+			<div class="work-left">
+			</div>
+			<div class="work-right">
+			</div>
 		</div>
 	</div>
 
