--- a/views/index.html
+++ b/views/index.html
@@ -11,16 +11,55 @@
 <div class="wp">	
 
 	<div class="wp-nav">
-		<ul>
-			<li class="on"><span class="iconfont">&#xe607;</span></li>
+		<ul class="wp-nav-top">
+			<li><span class="iconfont">&#xe60a;</span></li>
+			<li><span class="iconfont">&#xe607;</span></li>
 			<li><span class="iconfont">&#xe608;</span></li>
+		</ul>
+		<ul class="wp-nav-bottom">
+			<li><span class="iconfont">&#xe602;</span></li>
 		</ul>
 	</div>
 
 	<div class="wp-cont">
 		<div class="home">
-			<h1>首页</h1>
-			<p>首页就是牛逼，这里是一切牛逼技术的开始.</p>
+			<div class="home-nav">
+				<ul>
+					<li>首页</li>
+					<li></li>
+					<li></li>
+				</ul>
+				<div class="">
+				</div>
+			</div>
+			<div class="opus">
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<img src="images/2.jpg">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<img src="images/1.jpg">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+			</div>
 		</div>
 	</div>
 
