--- a/views/work.html
+++ b/views/work.html
@@ -11,15 +11,37 @@
 <div class="wp">	
 
 	<div class="wp-nav">
-		<ul>
-			<li class="on"><span class="iconfont">&#xe607;</span></li>
+		<ul class="wp-nav-top">
+			<li><span class="iconfont">&#xe60a;</span></li>
+			<li><span class="iconfont">&#xe607;</span></li>
 			<li><span class="iconfont">&#xe608;</span></li>
+		</ul>
+		<ul class="wp-nav-bottom">
+			<li><span class="iconfont">&#xe602;</span></li>
 		</ul>
 	</div>
 
 	<div class="wp-cont">
 		<div class="work">
-			<div class="work-left">
+			<div class="work-folder">
+				<ul>
+					<li><span class="iconfont">&#xe60d;</span>我的表演</li>
+					<li class="on"><span class="iconfont">&#xe60b;</span>原创理论</li>
+					<li><span class="iconfont">&#xe60c;</span>原创教学</li>
+				</ul>
+			</div>
+			<div class="work-file">
+				<a class="work-addbtn" href="javascript:void(0)">新建表演</a>
+				<ul class="work-show">
+					<li class="on">
+						<span>视频标题</span>
+					</li>
+					<li>
+						<span>视频标题</span>
+					</li>
+
+				</ul>
+				<a href="javascript:void(0)">在下方新建表演</a>
 			</div>
 			<div class="work-right">
 			</div>
