--- a/public/css/home.css
+++ b/public/css/home.css
@@ -14,3 +14,51 @@
     color:#fff;font-size:18px;
     text-align:center;
 }
+
+.home-nav{
+    height:50px;
+    border-bottom:1px solid #333;
+    box-shadow:0 1px 0 #666;
+}
+
+/*opus
+-----------------------------------------------------------*/
+
+.opus{
+    width:90%;max-width:1200px;
+    margin:0 auto;
+}
+.opus-content{position:relative;
+    float:left;
+    width:25%;padding:5px;
+    box-sizing:border-box;
+}
+.opus-content > a{
+    display:block;position:relative;
+    padding:10px;
+    background:#f1f1f1;
+    border:1px solid #ddd;
+    border-radius:5px;
+    box-sizing:border-box;
+}
+.opus-content > a img{display:block;margin-bottom:5px;width:100%;
+    border-radius:5px;overflow:hidden;
+    transition:all ease-out .3s;
+}
+.opus-content > a:hover img{opacity:1;}
+.opus-content > a strong{position:relative;overflow:hidden;
+    display:block;padding:5px;
+    font-weight:bold;
+    font-size:16px;line-height:18px;color:#333;
+}
+.opus-content > a span{display:block;padding:0 5px;
+    font-size:12px;line-height:20px;color:#555;
+    transition:all ease-out .3s;
+}
+
+@media screen and (max-width:980px) {
+    .opus-content{width:33.333%;}
+}
+@media screen and (max-width:600px) {
+    .opus-content{width:100%;}
+}
