--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -57,26 +57,29 @@ html,body{height:100%;width:100%;}
 
 .wp-nav{
     position:absolute;top:0;left:0;bottom:0;z-index:3;
-    width:60px;
+    width:50px;
     background:url(images/nav.png) 0 0 repeat-y;
     box-shadow:1px 1px 1px rgba(0,0,0,.5);
 }
-
 .wp-nav ul{}
 .wp-nav li{
-    width:60px;cursor:pointer;
+    width:50px;cursor:pointer;
 }
 .wp-nav li .iconfont{display:block;
     text-align:center;
-    line-height:60px;font-size:30px;color:#aaa;
+    line-height:50px;font-size:25px;color:#aaa;
 }
 .wp-nav li:hover .iconfont{color:#fff;}
 .wp-nav li.on .iconfont{color:#fff;}
 
+.wp-nav-bottom{
+    position:absolute;bottom:0;left:0;
+}
+
 
 .wp-cont{
-    margin-left:60px;
-    height:100%;
+    margin-left:50px;
+    height:100%;overflow:auto;
     background:url(images/bg.png) 0 0 repeat;
 }
 
