Signed-off-by: zhangbo8264 <zhangbo8264@163.com>

--- a/public/css/icon/iconfont.css
+++ b/public/css/icon/iconfont.css
@@ -20,6 +20,7 @@
 .icon-shipinziliao:before { content: "\e60d"; }
 .icon-plus:before { content: "\e601"; }
 .icon-shoucang:before { content: "\e609"; }
+.icon-libreoffice:before { content: "\e60e"; }
 .icon-iconfonthaoyou:before { content: "\e607"; }
 .icon-shezhi:before { content: "\e602"; }
 .icon-xiegonggao:before { content: "\e608"; }
