--- a/views/index.html
+++ b/views/index.html
@@ -26,8 +26,9 @@
 			<div class="home-nav">
 				<ul>
 					<li>首页</li>
-					<li></li>
-					<li></li>
+					<li>理论</li>
+					<li>表演</li>
+					<li>教学</li>
 				</ul>
 				<div class="">
 				</div>
@@ -38,6 +39,96 @@
 						<img src="images/2.jpg">
 						<strong>文章标题</strong>
 						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+					</a>
+				</div>
+				<div class="opus-content">
+					<a href="javascript:void(0)" class="clearfix">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
 					</a>
 				</div>
 				<div class="opus-content">
