--- a/views/work.html
+++ b/views/work.html
@@ -24,6 +24,7 @@
 	<div class="wp-cont">
 		<div class="work">
 			<div class="work-folder">
+				
 				<ul>
 					<li><span class="iconfont">&#xe60d;</span>我的表演</li>
 					<li class="on"><span class="iconfont">&#xe60b;</span>原创理论</li>
@@ -31,19 +32,35 @@
 				</ul>
 			</div>
 			<div class="work-file">
-				<a class="work-addbtn" href="javascript:void(0)">新建表演</a>
-				<ul class="work-show">
-					<li class="on">
-						<span>视频标题</span>
-					</li>
+				<div class="work-add-top">
+					<a href="">创建理论</a>
+				</div>
+				<ul class="work-theory">
 					<li>
-						<span>视频标题</span>
+						<strong>ULMEN 审判由 13个挑战项目</strong>
+						<p>
+							<span class="iconfont">&#xe60e;</span><em>已发表</em>
+							<span class="iconfont"></span><em></em>
+							<span class="iconfont"></span><em></em>
+						</p>
 					</li>
-
+					<li class="on">
+						<strong>ULMEN 审判由 13个挑战项目</strong>
+						<p>
+							<span class="iconfont">&#xe60e;</span><em>已发表</em>
+							<span class="iconfont"></span><em></em>
+							<span class="iconfont"></span><em></em>
+						</p>
+					</li>
+					
+					
 				</ul>
-				<a href="javascript:void(0)">在下方新建表演</a>
+				<div class="work-add-bottom">
+					<a href="">创建理论</a>
+				</div>
 			</div>
 			<div class="work-right">
+				
 			</div>
 		</div>
 	</div>
