--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,18 +1,5 @@
 .home{width:100%;
     position:relative;
-    height:100%;
-    box-shadow:2px 0 2px rgba(0,0,0,.3);
-}
-.home h1{
-    line-height:100px;
-    text-align:center;
-    text-align:center;font-size:50px;color:#fff;
-    font-family:"楷体";
-}
-.home p{
-    text-align:center;
-    color:#fff;font-size:18px;
-    text-align:center;
 }
 
 .home-nav{
@@ -20,7 +7,11 @@
     border-bottom:1px solid #333;
     box-shadow:0 1px 0 #666;
 }
-
+.home-nav li{
+    float:left;
+    padding:0 20px;
+    font-size:14px;line-height:50px;color:#fff;
+}
 /*opus
 -----------------------------------------------------------*/
 
@@ -29,7 +20,6 @@
     margin:0 auto;
 }
 .opus-content{position:relative;
-    float:left;
     width:25%;padding:5px;
     box-sizing:border-box;
 }
@@ -38,7 +28,7 @@
     padding:10px;
     background:#f1f1f1;
     border:1px solid #ddd;
-    border-radius:5px;
+    /*border-radius:5px;*/
     box-sizing:border-box;
 }
 .opus-content > a img{display:block;margin-bottom:5px;width:100%;
@@ -55,10 +45,8 @@
     font-size:12px;line-height:20px;color:#555;
     transition:all ease-out .3s;
 }
+.opus-content > a em{
+    display:block;padding:0 5px;
+    font-size:12px;color:#555;
+}
 
-@media screen and (max-width:980px) {
-    .opus-content{width:33.333%;}
-}
-@media screen and (max-width:600px) {
-    .opus-content{width:100%;}
-}
