--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -83,3 +83,28 @@ html,body{height:100%;width:100%;}
     background:url(images/bg.png) 0 0 repeat;
 }
 
+
+/*全局滚动条*/
+    ::-webkit-scrollbar {
+        width: 10px;height:10px;
+        transition:all ease-out .3s;
+    } /* 这是针对缺省样式 (必须的) */
+
+    ::-webkit-scrollbar-track {
+        background-color:#ccc;  
+    } /* 滚动条的滑轨背景颜色 */
+    ::-webkit-scrollbar-thumb {
+          background-color:#fff;
+          background:url(images/scroll.png) 0 0 repeat-y;
+          border:1px solid #aaaaaa;
+          border-right:none;
+          border-radius:5px;
+    } /* 滑块颜色 */
+
+    ::-webkit-scrollbar-button {
+          display:none;
+    } /* 滑轨两头的监听按钮颜色 */
+
+    ::-webkit-scrollbar-corner {
+          background-color: black;
+    } /* 横向滚动条和纵向滚动条相交处尖角的颜色 */
